--- a/src/app/components/masterdata/products/products.component.html
+++ b/src/app/components/masterdata/products/products.component.html
@@ -8,23 +8,57 @@
   </div>
 
   <div nz-row>
-    <div nz-col nzSpan="4">
-      <nz-upload [(nzFileList)]="fileList" [nzBeforeUpload]="beforeUpload">
+    <div nz-col nzSpan="6">
+      <nz-upload [(nzFileList)]="fileList" [nzBeforeUpload]="beforUpload">
         <button nz-button><i nz-icon nzType="upload"></i><span>Chọn File</span></button>
       </nz-upload>
     </div>
-    <div nz-col nzSpan="2">
+    <div nz-col nzSpan="3">
       <button nz-button [nzType]="'primary'" [nzLoading]="uploading" (click)="handleUpload()"
         [disabled]="fileList.length == 0">
         {{ uploading ? 'Uploading' : 'Start Upload' }}
       </button>
     </div>
 
-    <div nz-col nzSpan="2">
+    <div nz-col nzSpan="3">
       <button nz-button [nzType]="'primary'" [nzLoading]="uploading" (click)="handleUpload()">
         Thêm Sản Phẩm
       </button>
     </div>
   </div>
   <nz-divider></nz-divider>
+</div>
+
+
+<div>
+  <nz-table #headerTable [nzData]="listOfData" [nzPageSize]="50" [nzScroll]="{ y: '300px' }">
+    <thead>
+      <tr>
+        <th>STT</th>
+        <th>Mã Sản Phẩm</th>
+        <th>Tên Sản Phẩm</th>
+        <th>ĐVT</th>
+        <th>Giá Nhập Sản Phẩm</th>
+        <th>Giá Bán Sản Phẩm</th>
+        <th>Màu</th>
+        <th>Size</th>
+        <th>VAT</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let data of headerTable.data">
+        <td>{{ data.name }}</td>
+        <td>{{ data.age }}</td>
+        <td>{{ data.address }}</td>
+        <td>{{ data.name }}</td>
+        <td>{{ data.age }}</td>
+        <td>{{ data.address }}</td>
+        <td>{{ data.name }}</td>
+        <td>{{ data.age }}</td>
+        <td>{{ data.address }}</td>
+      </tr>
+    </tbody>
+  </nz-table>
+
+
 </div>
